--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -9,8 +9,11 @@
     "bootstrap": "3.3.1",
     "angular": "1.2.x",
     "angular-route": "1.2.x",
+    "angular-resource": "1.2.x",
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
+    "angular-bootstrap": "~0.12.x",
+    "angular-ui": "~0.12.x",
     "html5-boilerplate": "~4.3.0"
   }
 }
